# stm32starterpack

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  stm32starterpack.ioc
Core/Inc/: stm32h7xx_it.h
Core/Src/: main.c  stm32h7xx_it.c
app/include/: app.h  app.hpp
app/src/: app.cpp
cmake/: arm-gcc-toolchain.cmake  gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
platform/stm32/: README.md  cubemx_patch.sh  patch_cubemx.sh
platform/stm32/nucleo_h7a3ziq/: .mxproject  CMakeLists.txt  nucleo_h7a3ziq.ioc
platform/stm32/nucleo_h7a3ziq/Core/Src/: main.c
platform/stm32/nucleo_h7a3ziq/cmake/stm32cubemx/: CMakeLists.txt
platform/stm32/nucleo_h7a3ziq/cubemx/: .mxproject  STM32H7A3XX_FLASH.ld
platform/stm32/nucleo_h7a3ziq/cubemx/Core/Inc/: main.h
